--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "promisify-node": "^0.4.0",
     "prompt-lite": "0.1.1",
     "pushbullet": "1.4.3",
+    "pushover-notifications": "^0.2.3",
     "quadrigacx": "0.0.7",
     "relieve": "^2.1.3",
     "retry": "^0.10.1",
