adjusting binance timeout values, adding forever

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "scripts": {
     "test": "./node_modules/.bin/mocha test/*.js --recursive test -u tdd --reporter spec",
-    "start": "node ./gekko --config config.js --ui"
+    "start": "node ./gekko --config config.js --ui",
+    "daemon":"forever start -o logs/log_live.log gekko.js --config config.js"
   },
   "author": "Mike van Rossum <mike@mvr.me>",
   "dependencies": {
