--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha test/*.js --recursive test -u tdd --reporter spec",
     "start": "node ./gekko --config config.js --ui",
-    "daemon":"forever start -o logs/log_live.log gekko.js --config config.js"
+    "daemon": "forever start -o logs/log_live.log gekko.js --config config.js"
   },
   "author": "Mike van Rossum <mike@mvr.me>",
   "dependencies": {
@@ -68,6 +68,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "jshint": "^2.9.5",
     "mocha": "^5.0.0",
     "proxyquire": "^1.7.10",
     "request": "^2.83.0",
